small ui changes, plus added multi draw

--- a/app/src/main/res/layout/activity_create_private_game.xml
+++ b/app/src/main/res/layout/activity_create_private_game.xml
@@ -48,12 +48,11 @@
         android:text="000000"
         android:textColor="@color/blue"
         android:textSize="48sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/view"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.515"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/view"
-        app:layout_constraintVertical_bias="0.021" />
+        app:layout_constraintVertical_bias="0.473" />
 
     <View
         android:id="@+id/view2"
@@ -73,9 +72,10 @@
         android:backgroundTint="@color/blue"
         android:onClick="deleteGame"
         android:text="@string/deletePrivateGameBtn"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/view2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/view2"
-        app:layout_constraintVertical_bias="0.139" />
+        app:layout_constraintVertical_bias="0.483" />
 </androidx.constraintlayout.widget.ConstraintLayout>
