--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,11 +47,12 @@
         android:gravity="center"
         android:onClick="switchToScoreboard"
         android:text="@string/scoreboardText"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/view"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/multiplayerBtn"
-        app:layout_constraintVertical_bias="0.126" />
+        app:layout_constraintVertical_bias="0.193" />
 
     <Button
         android:id="@+id/singleplayerBtn"
@@ -61,11 +62,12 @@
         android:gravity="center"
         android:onClick="switchToDifficulty"
         android:text="@string/singleplayerText"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/view"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/view"
-        app:layout_constraintVertical_bias="0.075" />
+        app:layout_constraintVertical_bias="0.095" />
 
     <Button
         android:id="@+id/multiplayerBtn"
@@ -75,11 +77,12 @@
         android:gravity="center"
         android:onClick="switchToMultiplayer"
         android:text="@string/multiplayerText"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/view"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/singleplayerBtn"
-        app:layout_constraintVertical_bias="0.094" />
+        app:layout_constraintVertical_bias="0.144" />
 
     <Button
         android:id="@+id/howToBtn"
@@ -89,10 +92,11 @@
         android:gravity="center"
         android:onClick="switchToHowToPage"
         android:text="@string/howToTitle"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/view"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/scoreboardBtn"
-        app:layout_constraintVertical_bias="0.18" />
+        app:layout_constraintVertical_bias="0.506" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
