--- a/app/src/main/res/layout/activity_private_game.xml
+++ b/app/src/main/res/layout/activity_private_game.xml
@@ -60,11 +60,11 @@
         android:backgroundTint="@color/blue"
         android:onClick="switchToJoinGame"
         android:text="@string/joinGameBtn"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/view"
-        app:layout_constraintVertical_bias="0.079" />
+        app:layout_constraintVertical_bias="0.208" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
