--- a/app/src/main/res/layout/activity_scoreboard.xml
+++ b/app/src/main/res/layout/activity_scoreboard.xml
@@ -47,12 +47,12 @@
         android:gravity="center"
         android:onClick="switchToWorldScores"
         android:text="@string/worldScoresText"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/myScoreBtn"
-        app:layout_constraintVertical_bias="0.122" />
+        app:layout_constraintVertical_bias="0.48" />
 
     <Button
         android:id="@+id/myScoreBtn"
@@ -62,11 +62,11 @@
         android:gravity="center"
         android:onClick="switchToMyScores"
         android:text="@string/myScoreText"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/view"
-        app:layout_constraintVertical_bias="0.086" />
+        app:layout_constraintVertical_bias="0.221" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
