--- a/app/src/main/res/layout/activity_select_multiplayer_type.xml
+++ b/app/src/main/res/layout/activity_select_multiplayer_type.xml
@@ -46,12 +46,12 @@
         android:gravity="center"
         android:onClick="switchToRandomGame"
         android:text="@string/randomGameBtn"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/view"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/view"
-        app:layout_constraintVertical_bias="0.093" />
+        app:layout_constraintVertical_bias="0.231" />
 
     <Button
         android:id="@+id/privateGameBtn"
