--- a/app/src/main/res/layout/activity_singleplayer.xml
+++ b/app/src/main/res/layout/activity_singleplayer.xml
@@ -11,7 +11,7 @@
     <View
         android:id="@+id/view"
         android:layout_width="89dp"
-        android:layout_height="59dp"
+        android:layout_height="58dp"
         android:layout_marginStart="3dp"
         android:layout_marginTop="12dp"
         android:background="@drawable/radius"
@@ -21,7 +21,7 @@
     <View
         android:id="@+id/view2"
         android:layout_width="54dp"
-        android:layout_height="57dp"
+        android:layout_height="58dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="4dp"
         android:background="@drawable/radius"
@@ -32,25 +32,27 @@
         android:id="@+id/opponentPointTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="24dp"
-        android:textColor="@color/blue"
         android:text="@string/pointTextView"
+        android:textColor="@color/blue"
         android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@+id/view2"
+        app:layout_constraintEnd_toEndOf="@+id/view2"
+        app:layout_constraintHorizontal_bias="0.487"
+        app:layout_constraintStart_toStartOf="@+id/view2"
+        app:layout_constraintTop_toTopOf="@+id/view2"
+        app:layout_constraintVertical_bias="0.48" />
 
     <TextView
         android:id="@+id/timerTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
-        android:textColor="@color/blue"
         android:text="@string/timerTextView"
+        android:textColor="@color/blue"
         android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@+id/view"
+        app:layout_constraintEnd_toEndOf="@+id/view"
+        app:layout_constraintStart_toStartOf="@+id/view"
+        app:layout_constraintTop_toTopOf="@+id/view" />
 
     <TableLayout
         android:id="@+id/gameTableLayout"
