--- a/app/src/main/res/layout/activity_how_to_page.xml
+++ b/app/src/main/res/layout/activity_how_to_page.xml
@@ -64,6 +64,7 @@
                 android:id="@+id/howToPlayTextView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:justificationMode="inter_word"
                 android:text="@string/howToText"
                 android:textColor="@color/blue"
                 android:textSize="24sp" />
