--- a/app/src/main/res/layout/activity_multiplayer_end_screen.xml
+++ b/app/src/main/res/layout/activity_multiplayer_end_screen.xml
@@ -80,7 +80,7 @@
         android:layout_height="60dp"
         android:backgroundTint="@color/blue"
         android:gravity="center"
-        android:onClick="switchToRandomGame"
+        android:onClick="switchToMultiplayerType"
         android:text="@string/newGameBtn"
         app:layout_constraintBottom_toBottomOf="@+id/view2"
         app:layout_constraintEnd_toEndOf="parent"
